2008-06-19  Sam Steingold  <sds@gnu.org>

	* modules/netica/: updated to the Netica C API version 3.25 from 2.15

2008-06-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/posix.lisp (make-xterm-io-stream): avoid a race
	condition [between (delete-file tmps) and (mknod tmps :FIFO :RWXU)]
	by using mkdtemp and creating the pipe in the temporary directory;
	accept :XTERM argument and support rxvt in addition to xterm

2008-06-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (MKDTEMP): strip trailing slash from
	namez because mkdtemp(".../") --> ENOENT

2008-06-16  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (RAWSOCK:NETWORK): use getnetbyaddr
	instead of non-existent getnetbynumber

2008-06-13  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (make-macro-expansion): bind %proper-list-p to nil,
	not t, to allow dotted macro forms (broken since 2006-04-15)

2008-06-13  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_errno) [WIN32_NATIVE]:
	#include <winerror.h>, drop prefix=ERROR,
	and use cygwin cvs tree to define many more codes

2008-06-11  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GETHOSTID):
	use `unsigned long' instead of non-standard `ulong'

2008-06-05  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c, modules/syscalls/posix.lisp:
	remove the GET prefix from SETFable functions
	PGID, UID, GID, EUID, EGID, GROUPS

2008-06-05  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GETHOSTID): implement
	* modules/syscalls/posix.lisp (gethostid): export

2008-06-05  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (ERRNO): when the argument is T,
	return all known error codes as an alist

2008-06-04  Sam Steingold  <sds@gnu.org>

	* calls.c (ERRNO, STRERROR) [WIN32_NATIVE]: use GetLastError(),
	SetLastError() and FormatMessage() instead of errno and strerror
	(check_errno) [WIN32_NATIVE]: define separately

2008-06-04  Sam Steingold  <sds@gnu.org>
